add: router elementPlus

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,32 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"]
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "isolatedModules": false,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "./src*"
+        //   @/路径会直接指定到src文件夹
+      ],
+      "&/*": [
+        "./public*"
+        //   &/路径会直接指定到public文件夹
+      ]
+    }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
