--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "element-plus": "^2.1.5",
+    "pinia": "^2.0.12",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.6.6",
+    "unplugin-vue-components": "^0.18.4",
     "vite": "^2.8.0",
     "vue-tsc": "^0.29.8"
   }
