--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^17.0.23",
     "axios": "^0.26.1",
     "element-plus": "^2.1.5",
     "pinia": "^2.0.12",
