--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "@types/node": "^17.0.23",
     "axios": "^0.26.1",
     "element-plus": "^2.1.5",
@@ -17,6 +18,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "node-sass": "^7.0.1",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.6.6",
     "unplugin-vue-components": "^0.18.4",
