--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^1.1.4",
     "@types/node": "^17.0.23",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.1",
     "element-plus": "^2.1.5",
     "pinia": "^2.0.12",
     "vue": "^3.2.25",
