--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --port 3001",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.7",
     "@vitejs/plugin-vue": "^2.2.0",
     "node-sass": "^7.0.1",
     "sass": "^1.50.0",
