--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "dayjs": "^1.11.1",
     "element-plus": "^2.1.5",
+    "lyric-parser": "^1.0.1",
     "pinia": "^2.0.12",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
