--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.5.1",
+    "@better-scroll/mouse-wheel": "^2.5.1",
     "@element-plus/icons-vue": "^1.1.4",
     "@types/node": "^17.0.23",
     "axios": "^0.26.1",
